# mdpp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml  setup.sh
.cursor/rules/: project.mdc  python-analysis.mdc  python-plots.mdc  shell-scripts.mdc  tests.mdc
.github/workflows/: ci.yml  release.yml
docs/: getting-started.md  index.md  resources.md
docs/api/: analysis.md  chem.md  constants.md  core.md  plots.md  prep.md  scripts.md
docs/guide/: analysis.md  chem.md  core.md  plots.md  prep.md  scripts.md
examples/apbs/: README.md  apbs_btx_complex.py
examples/apbs/complex/: complex_apbs.ipynb  viz_complex_apbs.cxc  viz_complex_apbs.pml
examples/apbs/ligand/: ligand_apbs.ipynb  viz_ligand_apbs.cxc  viz_ligand_apbs.pml
examples/apbs/protein/: protein_apbs.ipynb  viz_protein_apbs.cxc  viz_protein_apbs.pml
examples/browndye/: README.md  _run_apbs_common.sh  bdprep.sh  bdrun.sh  browndye_prep.ipynb  complex_pqr.ipynb  run_amber_apbs.sh  run_ambertools.sh  run_apbs.sh  viz_complex_apbs.cxc  viz_complex_apbs.pml  viz_components_apbs.cxc  viz_components_apbs.pml
examples/browndye/complex/: prep.sh  run_apbs.sh
examples/browndye/substrate/: prep.sh  run_apbs.sh
examples/gromacs/: clustering.ipynb  contacts.ipynb  dccm.ipynb  distances.ipynb  dssp.ipynb  fes.ipynb  io_preprocessing.ipynb  projections.ipynb
examples/openfe/: ligands_amp_fep.smi  openfe_showcase.ipynb  openfold3_to_openfe.ipynb  rbfe.ipynb
notebooks/: README.md  apex_rmsd_rmsf.ipynb  dccm.ipynb  fes.ipynb  io_preprocessing.ipynb  rmsd_rmsf.ipynb
notebooks/browndye/: complex_pqr.ipynb
notebooks/gromacs/: fes.ipynb  io_preprocessing.ipynb  rmsd_rmsf.ipynb
notebooks/openfe/: openfe_showcase.ipynb  rbfe.ipynb
scripts/: gmx_compile.sh  gmx_postprocessing_complex.sh  gmx_postprocessing_complex_ion.sh  gmx_postprocessing_protein.sh  gromacs_analysis.sh  mdrun.sbatch  pymol_movie.pml
scripts/analysis/: gmx_analysis.sh  gmx_cluster.sh  gmx_dssp.sh  gmx_energy.sh  gmx_gyrate.sh  gmx_hbond.sh  gmx_rmsd.sh  gmx_rmsf.sh  gmx_sasa.sh
scripts/analysis/sherlock/: gmx_analysis.sh
scripts/browndye/: run_amber_apbs.sh
scripts/compilation/: gmx_compile.sh  gmx_mpi_compile.sh
scripts/compilation/sherlock/: gmx_compile.sh  gmx_mpi_compile.sh  gmx_mpi_plumed_compile.sh  plumed_compile.sh
scripts/gromacs/analysis/: gmx_cluster.sh  gmx_dssp.sh  gmx_energy.sh  gmx_gyrate.sh  gmx_hbond.sh  gmx_rmsd.sh  gmx_rmsf.sh  gmx_sasa.sh
scripts/gromacs/compilation/: gmx_compile.sh  gmx_mpi_compile.sh  gmx_mpi_plumed_compile.sh  plumed_compile.sh
scripts/gromacs/compilation/sherlock/: plumed_compile.sh
scripts/gromacs/data_transfer/: dtn_download.sh
scripts/gromacs/data_transfer/sherlock/: dtn_download.sh
scripts/gromacs/mdenv/: source_gmx.sh  source_gmx_mpi.sh  source_plumed.sh
scripts/gromacs/mdenv/sherlock/: source_gmx.sh
scripts/gromacs/mdps/amber/: step4.2_equilibration.mdp  step4.3_equilibration.mdp  step5_production.mdp
scripts/gromacs/mdrun/: mdexport.sh  mdprep.sh  mdrun.sbatch  mdrun.sh  mdrun_mpi_plumed.sbatch
scripts/gromacs/mdrun/mdps/: step4.0_minimization.mdp  step4.1_equilibration.mdp
scripts/gromacs/mdrun/rest2/: mdrun_mpi_plumed.sh  rest2.sh
scripts/gromacs/mdrun/runtime/: check_status.sh  restart.sh
scripts/gromacs/mdrun/sherlock/: mdrun_mpi_plumed.sbatch
scripts/gromacs/postprocessing/: export.sh  gmx_postprocessing.sh  gmx_postprocessing_fast.sh  run_postprocessing.sh
scripts/gromacs/runtime/: check_status.sh  export.sh  extend.sh  monitor.sbatch  restart.sh
scripts/gromacs/visualization/: pymol_movie.pml
scripts/mdenv/sherlock/: source_plumed.sh
scripts/mdrun/: mdexport.sh  mdextend.sh  mdprep.sh  mdrun.sh  mdrun_mpi_plumed.sh  mduntil.sh  rest2.sh  step4.0_minimization.mdp  step4.1_equilibration.mdp  step4.2_equilibration.mdp  step4.3_equilibration.mdp  step5_production.mdp
scripts/mdrun/sherlock/: mdrun.sbatch  mdrun_mpi_plumed.sbatch
scripts/openfe/: README.md  quickrun.sbatch  quickrun.sh
scripts/openfe/quickrun/: quickrun.sbatch  quickrun.sh
scripts/openfe/runtime/: check_status.sh  monitor.sbatch  monitor.sh
scripts/postprocessing/: gmx_postprocessing.sh
scripts/sherlock/: gmx_compile.sh  mdrun.sbatch
src/mdpp/: __init__.py  _cli.py  _dtype.py  _types.py  constants.py  utils.py
src/mdpp/analysis/: __init__.py  clustering.py  contacts.py  decomposition.py  distance.py  dssp.py  fes.py  hbond.py  metrics.py  trajectory.py
src/mdpp/analysis/_backends/: __init__.py  (+6 more)
src/mdpp/chem/: __init__.py  descriptors.py  filters.py  fingerprints.py  similarity.py  suppliers.py
src/mdpp/core/: __init__.py  parsers.py  trajectory.py
src/mdpp/data/: __init__.py  _resources.py
src/mdpp/plots/: __init__.py  clustering.py  contacts.py  fes.py  matrix.py  molecules.py  scatter.py  three_d.py  timeseries.py  utils.py
src/mdpp/plotting/: __init__.py  _common.py  fes.py  matrix.py  timeseries.py
src/mdpp/prep/: __init__.py  apbs.py  browndye.py  ligand.py  protein.py  topology.py
src/mdpp/scripts/: __init__.py  _cli.py  _resources.py
tests/: conftest.py  test_decomposition.py  test_dtype.py  test_fes.py  test_hbond.py  test_metrics.py  test_plotting.py
tests/analysis/: test_backend_gpu_cleanup.py  test_ca_distances.py  test_clustering.py  test_contacts.py  test_dccm.py  test_delta_rmsf.py  test_dssp.py  test_dtype_consistency.py  test_metrics.py  test_project_pca.py  test_rmsd_torch_streaming.py
tests/chem/: conftest.py  test_descriptors.py  test_filters.py  test_fingerprints.py  test_similarity.py  test_suppliers.py
tests/core/: bench_load_trajectories.py  test_parsers.py  test_trajectory.py
tests/plots/: test_clustering.py  test_molecules.py  test_pca_qc.py  test_plot_delta_rmsf.py  test_plots.py  test_three_d.py  test_timeseries_color.py
tests/prep/: test_apbs_debye.py  test_apbs_input.py  test_browndye_contact_types.py  test_browndye_dataclasses.py  test_browndye_input_xml.py  test_protein.py
tests/scripts/: conftest.py  test_scripts.py
tests/scripts/openfe/: test_quickrun.py
(+23 files in other folders)
